# project19.3

./: pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: fillblog.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py  0003_remove_blog_view_count_blog_views_count_and_more.py  0004_alter_blog_options.py  0005_blog_author_alter_blog_image_alter_blog_text_and_more.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: csu.py  fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_category_image_and_more.py  0002_product_manufactured_at.py  0003_alter_category_image.py  0004_version.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/: add_product.html  categories_menu.html  contacts.html  index.html  product_detail.html  products_list.html
catalog/templates/catalog/: category_list.html  contacts.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  user_product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
fixtures/: auth_data.json  blog_data.json  catalog_data.json  category_data.json  product_data.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_country.py
users/templates/users/: login.html  logout.html  (+2 more)
(+1 files in other folders)
